changed base url to wavemaker, removed tabzilla link for firefox

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,9 +65,6 @@
       {% endif %}
       <div class="section">
         {% block site_header %}
-          <div id="global-header-tab">
-            <a href="//www.mozilla.org/" id="tabzilla">Mozilla</a>
-          </div>
           <div class="amo-header">
             <nav id="aux-nav" role="navigation" class="menu-nav c">
               <ul>
@@ -76,17 +73,9 @@
                 {% endif %}
                 {% block aux_nav %}
                   <li>
-                    <a href="#" id="other-apps"
-                       title="{{ _('Find add-ons for other applications') }}">
-                      {{ _('Other Applications') }}</a>
+                    <a href="#" id="other-apps" title="{{ _('Other Products from WaveMaker') }}">{{ _('Other Products') }}</a>
                     <ul class="other-apps">
-                      {% for app in amo.APP_USAGE %}
-                        {% if app != request.APP and app != amo.MOBILE %}
-                          <li id="app-{{ app.short }}" class="{{ app.short }}">
-                            <a href="{{ locale_url(app.short) }}">{{ app.pretty }}</a>
-                          </li>
-                        {% endif %}
-                      {% endfor %}
+                      <li><a href="//wavemakercloud.com">WaveMaker Cloud</a></li>
                     </ul>
                   </li>
                 {% endblock aux_nav %}
