--- a/apps/addons/templates/addons/impala/details.html
+++ b/apps/addons/templates/addons/impala/details.html
@@ -231,7 +231,7 @@
   {% if addon.is_webapp() %}
     <h2>{{ _('About this App') }}</h2>
   {% else %}
-    <h2>{{ _('About this Add-on') }}</h2>
+    <h2>{{ _('About this Prefab') }}</h2>
   {% endif %}
   <div class="prose">
   {% if addon.description %}
