--- a/apps/amo/templates/amo/site_nav.html
+++ b/apps/amo/templates/amo/site_nav.html
@@ -20,7 +20,8 @@
 
 <nav id="site-nav" class="menu-nav c">
   <ul>
-    {{ section('extensions', _('Extensions'), url('browse.extensions'), extras, extensions) }}
+    {{ section('extensions', _('Prefabs'), url('browse.extensions'), extras, extensions) }}
+    {{ section('widgets', _('Widgets'), url('browse.extensions'), extras, widgets) }}
     {% set themes_extras = (
         ('popular', _('Most Popular')),
         ('rating', _('Top Rated')),
@@ -48,30 +49,7 @@
         </div>
       {% endif %}
     </li>
-
-    {% set collection_extras = (
-        ('featured', _('Featured')),
-        ('users', _('Most Followers')),
-        ('created', _('Newest')),
-    ) %}
-    <li id="collections">
-      {% with base_url = url('collections.list') %}
-      <a href="{{ base_url }}">{{ _('Collections') }}</a>
-      <ul>
-        {% for sort, title in collection_extras %}
-          <li><em><a href="{{ base_url|urlparams(sort=sort) }}">{{ title }}</a></em></li>
-        {% endfor %}
-        <hr>
-        <li><a href="{{ url('collections.mine') }}">
-          {{ _("Collections I've Made") }}</a></li>
-        <li><a href="{{ url('collections.following') }}">
-          {{ _("Collections I'm Following") }}</a></li>
-        {# We never let you change the favorites slug. #}
-        <li><a href="{{ url('collections.mine', 'favorites') }}">
-          {{ _('My Favorite Add-ons') }}</a></li>
-      </ul>
-      {% endwith %}
-    </li>
+  
     <li id="more">
       <a href="#">{{ _('More&hellip;') }}</a>
       <ul>
