--- a/media/css/impala/header.less
+++ b/media/css/impala/header.less
@@ -391,9 +391,6 @@
     position: absolute;
     top: 63px;
     right: 0;
-    .gradient-two-color(#2E89CA, #1B5898, #1B5898);
-    .border-radius(5px);
-    .box-shadow(0 -2px 0 rgba(0, 0, 0, 0.5) inset, 0 2px 0 rgba(0, 0, 0, 0.1));
     padding: 5px 7px 7px;
     width: 280px;
     #search-q,
@@ -468,7 +465,7 @@ button.search-button {
     background-color: #fcefb7;
     color: #333;
     padding: 15px 45px 15px 15px;
-
+    display: none;
     h3, strong {
         font-weight: bold;
     }
@@ -503,6 +500,7 @@ button.search-button {
     .close {
         position: absolute;
         overflow: hidden;
+        display:none;
         right: 1em;
         top: 1em;
         width: 25px;
