--- a/media/css/impala/site.less
+++ b/media/css/impala/site.less
@@ -9,8 +9,8 @@ html, body {
 }
 
 #tabzilla-wrapper {
-    background: #fff url(../../img/zamboni/global/bg-header.png) repeat-x;
-    border-top: 2px solid #fff;
+    background:url("../../img/zamboni/global/Background_Gradient.png") repeat-x scroll 0 0 #FFFFFF;
+    border-top: 2px solid #FFFFFF;
 }
 
 #page {
