--- a/templates/impala/header_title.html
+++ b/templates/impala/header_title.html
@@ -6,7 +6,7 @@
 </a>
 {%- endmacro %}
 {% if request.APP == amo.FIREFOX %}
-  {{ heading('Firefox', _('MarketPlace'), 'firefox') }}
+  {{ heading('Firefox', _('Wavemaker AppStore'), 'firefox') }}
 {% else %}
   {{ heading('', _('Add-ons'), 'generic') }}
 {% endif %}
