--- a/templates/qunit/qunit.html
+++ b/templates/qunit/qunit.html
@@ -235,7 +235,7 @@
   <div id="search-suggestions">
     <form id="search" action="/en-us/firefox/search/">
       <input id="search-q" type="text" name="q" required autocomplete="off" title=""
-             class="text placeholder" placeholder="search for add-ons" value="">
+             class="text placeholder" placeholder="search" value="">
       <div id="site-search-suggestions" data-src="/askjeeves" data-cat="all"></div>
     </form>
   </div>
