--- a/apps/addons/templates/addons/impala/details.html
+++ b/apps/addons/templates/addons/impala/details.html
@@ -1,7 +1,7 @@
 {% extends "impala/base_shared.html" %}
 {% set is_author = request.check_ownership(addon, require_owner=False) %}
 
-{% block title %}{{ page_title(addon.name) }}{% endblock %}
+{% block title %}{{ addon.name }}{% endblock %}
 {% block js %}{% include("amo/recaptcha_js.html") %}{% endblock %}
 {% block bodyclass %}gutter addon-details {{ super() }}{% endblock %}
 
