--- a/templates/impala/base.html
+++ b/templates/impala/base.html
@@ -6,7 +6,7 @@
       <meta name="robots" content="noindex">
     {% endif %}
     {% block extrameta %}{% endblock %}
-    <title>{% block title %}{{ _('Mozilla Add-ons') }}{% endblock %}</title>
+    <title>{% block title %}{{ _('Wavemaker Prefabs') }}{% endblock %}</title>
 
     <link rel="shortcut icon" type="image/x-icon"
           href="{{ MEDIA_URL}}img/favicon.ico">
@@ -118,23 +118,6 @@
                     <a href="#" class="close">{{ _('Close') }}</a>
                   </div>
                 {% endif %}
-                <div class="site-balloon" id="site-welcome">
-                  {# L10n: {0} is an application, such as Firefox. #}
-                  <h3>{{ _('Welcome to {0} Add-ons.')|f(APP.pretty) }}</h3>
-                  <p>
-                    {% if APP == amo.FIREFOX %}
-                      {% trans %}
-                        Choose from thousands of extra features and styles to make
-                        Firefox your own.
-                      {% endtrans %}
-                    {% else %}
-                      {% trans app=APP.pretty %}
-                        Add extra features and styles to make {{ app }} your own.
-                      {% endtrans %}
-                    {% endif %}
-                  </p>
-                  <a href="#" class="close">{{ _('Close') }}</a>
-                </div>
                 <div class="site-balloon" id="mobile-banner">
                   <h3>{{ _('On the go?') }}</h3>
                   <p>
