--- a/apps/addons/templates/addons/impala/details.html
+++ b/apps/addons/templates/addons/impala/details.html
@@ -167,7 +167,7 @@
             <li class="panel">
               <a class="screenshot thumbnail" rel="jquery-lightbox"
                  href="{{ preview.image_url }}" title="{{ preview.caption }}">
-                <img src="{{ preview.thumbnail_url }}">
+                <img src="{{ preview.thumbnail_url }}" width="200px" height="150px">
               </a>
             </li>
           {%- endfor -%}
