--- a/apps/amo/templates/amo/site_nav.html
+++ b/apps/amo/templates/amo/site_nav.html
@@ -21,7 +21,7 @@
 <nav id="site-nav" class="menu-nav c">
   <ul>
     {{ section('extensions', _('Prefabs'), url('browse.extensions'), extras, extensions) }}
-    {{ section('widgets', _('Widgets'), url('browse.extensions'), extras, widgets) }}
+    {{ section('widgets', _('Widgets'), url('browse.widgets'), extras, widgets) }}
     {% set themes_extras = (
         ('popular', _('Most Popular')),
         ('rating', _('Top Rated')),
